test/ui/name-resolution/exposure/undefined-reach.stderr
error[E021]: the binding ‘who-am-i’ is not defined in this scope
  ┌─ ${TEST_FOLDER}/name-resolution/exposure/undefined-reach.lushui:1:10
  │
1 │ @(public who-am-i)
  │          ════════

error[E021]: the binding ‘Who-Am-I’ is not defined in this scope
  ┌─ ${TEST_FOLDER}/name-resolution/exposure/undefined-reach.lushui:2:6
  │
2 │ Foo: Who-Am-I = extern.core.type.Type
  │      ════════

error[E021]: the binding ‘who-am-i’ is not defined in module ‘topmost.namespaced’
  ┌─ ${TEST_FOLDER}/name-resolution/exposure/undefined-reach.lushui:4:21
  │
4 │ @(public namespaced.who-am-i)
  │                     ════════

error[E021]: the binding ‘void’ is not defined in module ‘topmost.namespaced’
  ┌─ ${TEST_FOLDER}/name-resolution/exposure/undefined-reach.lushui:9:17
  │
9 │ @(public indir2.void)
  │                 ════

error[E021]: the binding ‘emptiness’ is not defined in module ‘topmost.namespaced’
   ┌─ ${TEST_FOLDER}/name-resolution/exposure/undefined-reach.lushui:21:22
   │
21 │ @(public self.indir2.emptiness)
   │                      ═════════

error: aborting due to 5 previous errors

