test/ui/name-resolution/exposure/undefined-reach.lushui
@(public who-am-i)
Foo: Who-Am-I = extern.core.type.Type

@(public namespaced.who-am-i)
Bar: Unit = Unit.unit

module namespaced of

@(public indir2.void)
Y = Unit

data Unit of
    unit: Unit

use topmost.(
    namespaced as indir0,
    indir0 as indir1,
    indir1 as indir2,
)

@(public self.indir2.emptiness)
X = Unit
